# cs2-cross-market-arbitrage-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: analytics.py  compare.py  csfloat_client.py  dataset_builder.py  features.py  llm_analyst.py  main.py  manual_integration.py  recommender.py  test.py  uu_client.py
data/: opportunity_features.csv  opportunity_snapshots.csv  recommendations.csv  watchlist.csv
sql/: data_quality_report.sql  label_distribution.sql  liquidity_analysis.sql  top_opportunities.sql
tests/: test_analytics.py  test_dataset_builder.py  test_features.py  test_llm_analyst.py  test_market_name.py  test_recommender.py  test_uu_client.py
